// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should render 1`] = `
<div>
  <input
    class="sc-AxjAm gykLhk"
    color="success"
    type="checkbox"
  />
</div>
`;

exports[`Checkbox should render a danger color 1`] = `
<div>
  <input
    class="sc-AxjAm ebDDPA"
    color="danger"
    type="checkbox"
  />
</div>
`;

exports[`Checkbox should render a primary color 1`] = `
<div>
  <input
    class="sc-AxjAm dDdRbL"
    color="primary"
    type="checkbox"
  />
</div>
`;

exports[`Checkbox should render a success color 1`] = `
<div>
  <input
    class="sc-AxjAm gykLhk"
    color="success"
    type="checkbox"
  />
</div>
`;

exports[`Checkbox should render a warning color 1`] = `
<div>
  <input
    class="sc-AxjAm eIrkqV"
    color="warning"
    type="checkbox"
  />
</div>
`;
